# dotfiles

./: .profile  COMMANDS.md  PACKAGES.md  README.md  README.rs  SETUP.md  alacritty.toml  atuin.theme.toml  atuin.toml  auto_login  autologin.conf  bash.profile  bat.nix  bottom.toml  cargo.config.rustc.toml  cargo.config.toml  config.nu  configuration.nix  configure.reg  corne.keymap  dotfilers.toml  dotfiles.toml  dots  dots.toml  firefox.nix  firefox.policies.json  firefox.user.js  flake.nix  fonts.conf.xml  git.config  git.nix  gitui.theme.ron  glazewm.yaml  glide.ts  helix.nix  home.nix  i3.nix  kanshi.config  keyboard.json  kitty.conf  (+24 more)
.cargo/: config.toml
apps/: atuin.nix  bat.nix  firefox.nix  git.nix  gitui.nix  helix.nix  lazygit.nix  nushell.nix  rio.nix  sway.nix  wezterm.nix  yazi.nix
bat/: config
bat/themes/: catppuccin.tmTheme
configs/: cargo.config.toml  gitui_theme.ron  glazewm.yaml  lazygit.yml  rio.toml  wezterm.lua
dotfiles_manager/: Cargo.toml
hardware-configuration/: laptop-asus-vivobook-16.nix
helix/: config.toml
nix-hardware/: laptop.nix  nvidia.nix  pc.nix
nushell/: carapace.nu  catppuccin.nu  config.nu  login.nu
programs/: README.md
programs/app_launcher/: Cargo.toml
programs/app_launcher/src/: main.rs  window_id.rs
programs/proton-pass-finder/: Cargo.toml
programs/proton-pass-finder/src/: main.rs  secret_str.rs
programs/proton-pass-finder/src/screen/: login_form.rs  mod.rs  searcher.rs
rmk-keyboard/: Cargo.toml
scripts/: 16_9_center.sh  16_9_left.sh  16_9_off.sh  16_9_right.sh  add_protonvpn_to_firewall.nu
(+34 files in other folders)
