[package]
name = "proton-pass-finder"
version = "0.1.0"
edition = "2024"

[dependencies]
assert2 = "0.4.0"
derive_more = { version = "2.1.1", features = ["full"] }
expectrl = "0.8.0"
eyre = "0.6.12"
iced = { version = "0.13", features = ["tokio"] }
iced_layershell = "0.13"
itertools = "0.14.0"
jiff = { version = "0.2.23", features = ["serde"] }
rayon = "1.11.0"
fuzzy-matcher = "0.3.7"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.18.0"
